[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
norecursedirs = ["scheil/_dev"]
addopts = "--doctest-modules"
testpaths = [
    "scheil",
    "tests",
    "pycalphad<=0.9.2",
]

[tool.setuptools_scm]